# fluid-simulation-cuda

./: CMakeLists.txt  LICENSE  README.md  environment.yml  runner.ipynb
include/: helpers.h  params.h  solver.h  solver_cuda.h
python/: plot_wave.py
src/: main_cuda.cu  main_openmp.c  main_serial.c  solver.c  solver_cuda.cu
